--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,7 +3,7 @@
 MySQL Settings
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ibank_test
+jdbc.url=jdbc:mysql://localhost:3306/test_task
 jdbc.username=root
 jdbc.password=root
         
